--- a/src/components/Main Banner/MainBanner.css
+++ b/src/components/Main Banner/MainBanner.css
@@ -1,105 +1,96 @@
-.main-banner {
-  position: relative;
-  max-height: 100%;
-  overflow: hidden;
-  margin-bottom: -7px;
-  min-width: 100%;
-    min-height: 100vh;
-  /* border: 2px solid red; */
-  width: 100vw;
+/* Global Styles */
+html {
+  box-sizing: border-box;
+  font-family: sans-serif;
+  line-height: 1.15;
+  text-size-adjust: 100%;
+  -webkit-tap-highlight-color: transparent;
 }
 
-
-#bg-video {
-    min-width: 100em;
-    min-height: 100vh;
-    max-width: 100vw;
-    max-height: 100vh;
-    object-fit: cover;
-    z-index: -1;
+body {
+  box-sizing: border-box;
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: rgb(33, 37, 41);
+  text-align: left;
+  background-color: rgb(255, 255, 255);
+  font-family: Montserrat, sans-serif;
 }
 
-#bg-video::-webkit-media-controls {
-    display: none !important;
-}
-
+/* .video-overlay */
 .video-overlay {
-    position: absolute;
-    background-color: rgba(22,34,57,0.85);
-    top: 0;
-    left: 0;
-    bottom: 7px;
-    width: 100%;
+  box-sizing: border-box;
+  position: absolute;
+  background-color: rgba(22, 34, 57, 0.85);
+  top: 0;
+  left: 0;
+  bottom: 7px;
+  width: 100%;
 }
 
-.main-banner .caption {
+/* .caption */
+.caption {
+  box-sizing: border-box;
   text-align: center;
   position: absolute;
-  width: 100%;
+  width: 80%;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
-.main-banner .caption h6 {
-  margin-top: 0px;
+/* h6 */
+h6 {
+  box-sizing: border-box;
+  margin-bottom: 0.5rem;
+  line-height: 1.2;
+  margin-top: 0;
   font-size: 18px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #fff;
+  color: rgb(255, 255, 255);
   letter-spacing: 1px;
-  font-family: 'Montserrat', sans-serif;
 }
 
-.main-banner .caption h2 {
+/* h2 */
+h2 {
+  box-sizing: border-box;
+  line-height: 1.2;
   margin-top: 30px;
   margin-bottom: 30px;
-  font-family: 'Montserrat', sans-serif;
   font-size: 64px;
   text-transform: uppercase;
   font-weight: 800;
-  color: #fff;
+  color: rgb(255, 255, 255);
   letter-spacing: 1px;
 }
 
-.main-banner .caption h2 em {
+/* em */
+em {
+  box-sizing: border-box;
   font-style: normal;
-  color: #3fe503dd;
+  color: rgba(63, 229, 3, 0.867);
   font-weight: 900;
 }
-.scroll-to-section{
-  box-sizing: "border-box";
-  text-decoration: "none";
-  padding: "12px 20px";
-  outline: "none";
-  background-color: "rgba(63, 229, 3, 0.867)";
-  color: "rgb(255, 255, 255)";
-  font-size: "13px";
-  text-transform: "uppercase";
-  letter-spacing: "0.5px";
+
+/* .main-button */
+.main-button {
+  box-sizing: border-box;
+}
+
+/* .scroll-to-section a */
+.scroll-to-section a {
+  box-sizing: border-box;
+  text-decoration: none;
+  padding: 12px 20px;
+  outline: none;
+  background-color: rgba(63, 229, 3, 0.867);
+  color: rgb(255, 255, 255);
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
   font-weight: 700;
-  display: "inline-block";
-  text-align: "center";
-}
-@media screen and (max-width: 1180px) {
-
-  .main-banner .caption h6 {
-    font-weight: 500;
-  }
-
-  .main-banner .caption h2 {
-    font-size: 58px;
-  }
-
-}
-@media screen and (max-width: 767px) {
-
-  .main-banner .caption h6 {
-    font-weight: 500;
-  }
-
-  .main-banner .caption h2 {
-    font-size: 36px;
-  }
-
+  display: inline-block;
 }
