Updated the frontend and added css

--- a/src/components/WhyGradSchool/WhyGradSchool.css
+++ b/src/components/WhyGradSchool/WhyGradSchool.css
@@ -1,202 +1,20 @@
-/* Global Styles */
-html {
-    box-sizing: border-box;
-    font-family: sans-serif;
-    line-height: 1.15;
-    text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent;
-  }
+.section-why-us{
+  border: 2px solid red;
+  background-image: url(./imageChoose/choosing-bg.jpg);
+  box-sizing: border-box;
+  display: block;
+  background-repeat: no-repeat;
   
-  body {
-    box-sizing: border-box;
-    margin: 0;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: rgb(33, 37, 41);
-    text-align: left;
-    background-color: rgb(255, 255, 255);
-    font-family: Montserrat, sans-serif;
-  }
-  
-  /* .section why-us */
-  .section.why-us {
-    box-sizing: border-box;
-    display: block;
-    background-repeat: no-repeat;
-    background-image: url("http://127.0.0.1:5500/assets/images/choosing-bg.jpg");
-    background-color: rgb(23, 34, 56);
-    background-size: cover;
-    padding-bottom: 100px;
-  }
-  
-  .container {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-    max-width: 1140px;
-  }
-  
-  .row {
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
-  }
-  
-  .col-md-12 {
-    box-sizing: border-box;
-    position: relative;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    flex: 0 0 100%;
-    max-width: 100%;
-  }
-  
-  /* .section-heading */
-  .section-heading {
-    box-sizing: border-box;
-    text-align: center;
-    margin-bottom: 70px;
-  }
-  
-  /* h2 */
-  h2 {
-    box-sizing: border-box;
-    margin-bottom: 0.5rem;
-    line-height: 1.2;
-    padding: 15px 20px;
-    border: 2px solid rgba(250, 250, 250, 0.1);
-    margin-top: 100px;
-    position: relative;
-    font-size: 18px;
-    font-weight: 500;
-    color: rgb(255, 255, 255);
-    letter-spacing: 0.5px;
-    display: inline-block;
-  }
-  
-  /* #tabs */
-  #tabs {
-    box-sizing: border-box;
-    text-align: center;
-  }
-  
-  /* .ui-tabs-nav */
-  .ui-tabs-nav {
-    box-sizing: border-box;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    column-count: 3;
-    column-gap: 0;
-  }
-  
-  /* .ui-tabs-nav li */
-  .ui-tabs-nav li {
-    box-sizing: border-box;
-    display: block;
-    font-weight: 400;
-    font-size: 1.2em;
-    letter-spacing: 1px;
-    text-align: center;
-  }
-  
-  /* .ui-tabs-nav li a */
-  .ui-tabs-nav li a {
-    box-sizing: border-box;
-    background-color: transparent;
-    outline: 0;
-    text-decoration: none;
-    display: block;
-    font-size: 13px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    cursor: pointer;
-    padding-bottom: 30px;
-    color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    position: relative;
-  }
-  
-  /* .tabs-content */
-  .tabs-content {
-    box-sizing: border-box;
-    display: block;
-    margin-top: 60px;
-    text-align: left;
-  }
-  
-  /* .tabs-content article */
-  .tabs-content article {
-    box-sizing: border-box;
-    display: none;
-  }
-  
-  /* .tabs-content article#tabs-1 */
-  .tabs-content article#tabs-1 {
-    display: none;
-  }
-  
-  /* .tabs-content article#tabs-2 */
-  .tabs-content article#tabs-2 {
-    display: block;
-  }
-  
-  /* .tabs-content article#tabs-3 */
-  .tabs-content article#tabs-3 {
-    display: none;
-  }
-  
-  /* .col-md-6 */
-  .col-md-6 {
-    box-sizing: border-box;
-    position: relative;
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-  
-  /* img */
-  img {
-    box-sizing: border-box;
-    border-style: none;
-    vertical-align: middle;
-    overflow: hidden;
-    width: 100%;
-    padding-right: 45px;
-  }
-  
-  /* h4 */
-  h4 {
-    box-sizing: border-box;
-    line-height: 1.2;
-    margin-top: 60px;
-    font-size: 32px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    color: rgb(255, 255, 255);
-    margin-bottom: 30px;
-  }
-  
-  /* p */
-  p {
-    box-sizing: border-box;
-    margin-top: 0;
-    margin-bottom: 1rem;
-    color: rgb(255, 255, 255);
-    font-size: 15px;
-    line-height: 28px;
-  }
-  
+  background-color: rgb(23, 34, 56);
+  background-size: cover;
+  padding-bottom: 100px;
+}
+.section-why-us .container{
+  box-sizing: border-box;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 1140px;
+}
