--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 *{
-  overflow: hidden;
+  /* overflow: hidden; */
   box-sizing: border-box;
 }
 
 body{
-  overflow: hidden;
+  /* overflow: hidden; */
   margin:0;
   padding: 0;
 }
@@ -14,5 +14,11 @@ body{
   font-family: 'Montserrat', sans-serif;
   padding: 0;
   margin: 0;
-  object-fit:cover;
+  /* object-fit:; */
+  display: flex;
+  flex-direction: column;
+}
+
+.bodyContainer{
+  overflow-y: hidden;
 }
