--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,12 +5,14 @@
     z-index: 12;
     width: 100%;
     top: 0;
+    border: red solid;
 }
 .main-header .logo {
     float: left;
     /* line-height: 60px; */
     padding: auto;
     padding-left: 60px;
+    border: red solid;
 }
 
 
@@ -32,10 +34,12 @@
     margin: 0;
     display: flex;
     justify-content:center;
+    align-items: center;
     float: right;
     padding-right: 60px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 15px;
+    padding-bottom: 0px;
+    /* border: red solid; */
 }
 
 .main-menu li {
@@ -59,6 +63,7 @@
     border: 2px solid transparent;
     transition: all 0.5s;
     text-decoration: none;
+    /* border: red solid; */
 }
 
 .main-menu li.has-submenu a:after {
