--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -14,6 +14,10 @@
     border: 2px solid green;
     cursor: pointer;
   }
+  .note__btn:hover{
+    background-color: rgb(53, 53, 88);
+    color: white;
+  }
   
   @media screen and (max-width: 650px) {
     
