--- a/src/components/Admin/Form.css
+++ b/src/components/Admin/Form.css
@@ -37,3 +37,16 @@
     background-color: #0056b3;
   }
   
+  .loader{
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.70);  top: 0;
+    backdrop-filter: blur(5px);
+    z-index: 100;
+    flex-direction: column;
+    font-weight: bold;
+  }
