--- a/src/components/WhyGradSchool/WhyGradSchool.css
+++ b/src/components/WhyGradSchool/WhyGradSchool.css
@@ -1,5 +1,5 @@
 .section-why-us{
-  border: 2px solid red;
+  /* border: 2px solid red; */
   background-image: url(./imageChoose/choosing-bg.jpg);
   box-sizing: border-box;
   display: block;
