--- a/src/components/Main Banner/MainBanner.css
+++ b/src/components/Main Banner/MainBanner.css
@@ -1,6 +1,6 @@
 .section-main-banner{
   box-sizing: border-box;
-  border: 4px solid red;
+  /* border: 4px solid red; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,7 +30,7 @@
 }
 .bg-video{
   margin: auto;
-  border: 4px solid red;
+  /* border: 4px solid red; */
   /* Position the video container relative to the parent */
   top: 0;
   left: 0;
