--- a/src/components/FeaturesSection/FeatureSection.css
+++ b/src/components/FeaturesSection/FeatureSection.css
@@ -1,7 +1,7 @@
 .feature-main-container{
     /* border: 4px solid orange; */
     /* background-color: white; */
-    margin-top: 44%;
+    margin-top: 43.5%;
     /* opacity: 0.5; */
     /* z-index: 1000; */
     display: flex;
@@ -18,7 +18,6 @@
     background-color: #0c1228;
     color: white;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     height: 50px;
     transition: transform 0.9s ease-in-out;
@@ -26,14 +25,14 @@
 
 .feature-main-container-sub:hover {
     background-color: green;
-    height: 150px;
+    height: 200px;
     /* height: 450px; */
     transform: translateY(-100px);
     text-align: center;
 }
 
 .feature-main-container-sub-p1{
-    font-size: 20px;
+    text-align:left;
     font-weight: bolder;
     margin-top: -5px;
 }
